# poor-downloader

./: Cargo.toml  README.md
src/: dialog.rs  main.rs  window.rs
