[package]
name = "poor-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
aria2-ws = "0.4.0"
fltk = "1.3.31"
tokio = { version = "1.25.0", features = ["time", "rt", "macros", "rt-multi-thread", "fs", "sync", "io-util", "process"] }
